feat(js/script.js):new feat)

--- a/index.html
+++ b/index.html
@@ -9,10 +9,21 @@
 
 	<link rel="stylesheet" type="text/css" href="./css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<style>
+		html, body{
+			margin:0;
+			overflow:hidden;
+		}
+		#blueRect{
+			width:100px;
+			height:100px;
+			background-color:blue;
+		}
+		</style>
 </head>
+
 <body>
-
-
+	
 <script src='./js/script.js'></script>
 
 </body>
